# rust_cxx_callback

./: .gitignore  .gitpod.yml  Dockerfile  Makefile  README.md
.github/workflows/: build.yml
cxx/: CMakeLists.txt
cxx/include/: mysignal.h  mysignal.hpp  mysignal_c.h
cxx/src/: c_main.c  main.cc  mysignal.cc
rust_caller/: Cargo.toml  build.rs
rust_caller/src/: main.rs
